--- a/20170720.Rmd
+++ b/20170720.Rmd
@@ -18,8 +18,8 @@ why ggplot2?
 - consistent across all kinds of plot in syntax and behavior
 - strong support community(the mostly download package on CRAN)
 ```{R}
-#basic syntax
-#ggplot(data,aes(x,y,group,...))+geom_object(...)
+# basic syntax
+# ggplot(data,aes(x,y,group,...))+geom_object(...)
 install.packages('ggplot2')
 library('ggplot2')
 load('Statistics/cdc.Rdata')
@@ -28,18 +28,18 @@ cdc$hlthplan=as.factor(cdc$hlthplan)
 cdc$smoke100=as.factor(cdc$smoke100)
 
 g <- ggplot(cdc,aes(x=height,y=weight))
-g+geom_point(aes(col=exerany))
+g + geom_point(aes(col=exerany))
 
 g <- ggplot(cdc,aes(x=genhlth))
-g+geom_bar()
-g+geom_bar() + ylab('Count') + ggtitle('cdc')
-#fill => 填滿顏色; color => 邊線顏色
-g+geom_bar(fill='snow',color='black')
+g + geom_bar()
+g + geom_bar() + ylab('Count') + ggtitle('cdc')
+# fill => 填滿顏色; color => 邊線顏色
+g + geom_bar(fill='snow',color='black')
 
 g <- ggplot(cdc,aes(x=genhlth,fill=gender))
-g+geom_bar()
-#g <- ggplot(cdc,aes(x=genhlth))
-#g+geom_bar(aes(fill=gender))
+g + geom_bar()
+# g <- ggplot(cdc,aes(x=genhlth))
+# g+geom_bar(aes(fill=gender))
 
 g_bygrp <- ggplot(cdc,aes(x=exerany,fill=genhlth))
 g_bygrp + geom_bar()
@@ -54,9 +54,9 @@ ggplot(precounted,aes(x=genhlth,y=Freq))+ geom_bar(stat='identity')
 g <- ggplot(cdc,aes(x=genhlth,y=height))
 g + geom_boxplot()
 
-#facet
+# facet
 g <- ggplot(cdc,aes(x=weight))
-g2 = g+ geom_histogram()+facet_wrap(~genhlth)
+g2 = g + geom_histogram()+facet_wrap(~genhlth)
 g2
 
 ggsave(filename='your_file_name.png',plot = g2)
@@ -66,31 +66,44 @@ ggsave(filename='your_file_name.png',plot = g2)
 ## 資料預處理
 ```{R}
 getwd()
-setwd('~/lecture/riii')
+# setwd('~/lecture/riii')
 load('Statistics/appledaily.RData')
+View(appledaily)
+
+# "data.frame"
+class(appledaily)
+
+# "list"
+typeof(appledaily)
+mode(appledaily)
 
 str(appledaily)
 head(appledaily)
 
-#把dt轉換成日期型態
-#方法一：用as.POSIXct()轉換
+
+# 把dt轉換成日期型態
+appledaily$dt
+
+# 方法一：用as.POSIXct()轉換
 appledaily$dt = as.POSIXct(appledaily$dt,format = '%Y年%m月%d日%H:%M')
 
-#方法二：用strptime()轉換
+# 方法二：用strptime()轉換
 strptime(appledaily$dt,'%Y年%m月%d日%H:%M')
 
-#比較as.POSIXct() 和 as.POSIXlt
+# 比較as.POSIXct() 和 as.POSIXlt
+# 表示使用連續型時間計算的數值格式 (ct: continuous time)
 t1 = as.POSIXct(appledaily$dt,format = '%Y年%m月%d日%H:%M')
 class(t1)
 unclass(t1)
 
+# 表示使用可讀的列表物件 (lt: legibletime)
 t2 = as.POSIXlt(appledaily$dt,format = '%Y年%m月%d日%H:%M')
 class(t2)
 unclass(t2)
 
 # Date 和 POSIX 差別
-# Date類別表示 "日期",  表示距離1970/1/1多少天, 單位為天
-# POSIX類別表示 "時間", 表示距離1970/1/1多少秒, 單位為秒
+# Date 類別表示 "日期",  表示距離1970/1/1多少天, 單位為天
+# POSIX 類別表示 "時間", 表示距離1970/1/1多少秒, 單位為秒
 
 now = Sys.time()
 class(now)
@@ -100,36 +113,37 @@ nowDate = as.Date(now)
 class(nowDate)
 unclass(nowDate)
 
-#difftime
+# difftime
 Sys.time() - strptime(appledaily$dt,'%Y年%m月%d日%H:%M')[1]
 
-#擷取點擊數中數值部分
-#方法一：利用sub函數取代
+# 擷取點擊數中數值部分
+# 方法一：利用sub函數取代
 appledaily$clicked = sub('\\)','',sub('人氣\\(','',appledaily$clicked))
 appledaily$clicked = as.integer(appledaily$clicked)
 head(appledaily)
 
-#方法二：使用stringr套件的str_match()
+# 方法二：使用stringr套件的str_match()
 library(stringr)
 ?str_match
 as.integer(str_match(appledaily$clicked,"人氣\\((\\d+)\\)")[,2])
+```
 
-
-#其他常見字串處理函式
-#grep()  ==> return index
+```{r}
+# 其他常見字串處理函式
+# grep()  ==> return index
 test_str = c('abcd','bcd','cde')
 grep('a',test_str)
 test_str[grep('a',test_str)]
 
-#grepl() ==> return boolean 
+# grepl() ==> return boolean 
 grepl('a',test_str)
 test_str[grepl('a',test_str)]
 
-#strsplit() ==> 字串分割
+# strsplit() ==> 字串分割
 strsplit('abc-def','-')
 unlist(strsplit('abc-def','-'))[1]
 
-#substring() ==> 取得部份字串
+# substring() ==> 取得部份字串
 substring('abcdef',2,nchar('abcdef')-1)
 
 names(table(appledaily$category))
@@ -137,29 +151,30 @@ appledaily$category[appledaily$category == "國際\",\"LA\",\"SF\",\"NY\",\"US"]
 appledaily$category[appledaily$category == "國際\",\"SF\",\"US"] = '國際'
 names(table(appledaily$category))
 
-#儲存處理過的檔案
+# 儲存處理過的檔案
 applenews = appledaily
 save(applenews,file = 'Statistics/applenews.RData')
+```
 
-
-#遺失值處理(missing value)
+```{r}
+# 遺失值處理(missing value)
 na_list = sample(1:nrow(applenews),30)
 applenews[na_list,'clicked'] = NA
 
-#找尋遺失值
+# 找尋遺失值
 is.na(applenews)
 sum(is.na(applenews$clicked))
 
-#移除missing value
+# 移除missing value
 complete.cases(applenews)
 rm.data <- applenews[complete.cases(applenews), ]
 str(rm.data)
 
-#以全體平均填補
+# 以全體平均填補
 mean_clicked = as.integer(mean(applenews$clicked,na.rm=T))
 applenews$clicked[is.na(applenews$clicked)] = mean_clicked
 
-#以類別平均填補
+# 以類別平均填補
 cat_means = tapply(applenews$clicked,applenews$category,function(e){as.integer(mean(e,na.rm=T))})
 
 for(i in 1:length(names(cat_means))){
@@ -180,36 +195,36 @@ load('Statistics/applenews.RData')
 str(applenews)
 head(applenews)
 
-install.packages('dplyr')
+# install.packages('dplyr')
 library(dplyr)
 
-#原先R 提供的過濾功能
+# 原先R 提供的過濾功能
 applenews[applenews$category == "娛樂",]
 
-#dplyr 的過濾功能
+# dplyr 的過濾功能
 filter(applenews, category == "娛樂")
 
-#and/or 
+# and/or 
 filter(applenews, category == "娛樂" & clicked > 1000)
 filter(applenews, category == "娛樂" | clicked > 1000)
 
-#篩選多個類別
+# 篩選多個類別
 filter(applenews, category %in% c("娛樂", "社會"))
 
-#原先R的欄位選取
+# 原先R的欄位選取
 applenews[, c("category","clicked")]
 
-#dplyr 的欄位選取
+# dplyr 的欄位選取
 select(applenews,category,clicked)
 select(applenews,category:clicked)
 select(applenews,matches('click'))
 
 ?matches
 
-#想同時filter 和 select
+# 想同時filter 和 select
 filter(select(applenews,category:clicked),category == '娛樂')
 
-#使用Chaining
+# 使用Chaining
 select(applenews,category:clicked) %>%
   filter(category == '娛樂')
 
@@ -217,7 +232,7 @@ applenews %>%
   select(category:clicked) %>%
   filter(category == '娛樂')
 
-#使用Arrange將資料做排序
+# 使用Arrange將資料做排序
 applenews %>%
   select(category,clicked) %>% 
   filter(category == "社會") %>% 
@@ -229,24 +244,24 @@ freqsum = applenews %>%
   select(clicked) %>% 
   sum()
 
-#使用mutate產生新欄位
+# 使用mutate產生新欄位
 applenews %>%
   select(title, category,clicked) %>% 
   mutate(portion= clicked / freqsum) %>%
   arrange(desc(portion)) %>%
   head()
 
-#新增portion欄位
+# 新增portion欄位
 applenews = applenews %>%
   mutate(portion= clicked / freqsum)
 
-#group_by & summarise
+# group_by & summarise
 applenews %>%
   group_by(category) %>%
   summarise(clicked_sum = sum(clicked, na.rm=TRUE)) %>%
   arrange(desc(clicked_sum))
 
-#多個欄位計算
+# 多個欄位計算
 applenews %>%
   group_by(category) %>% 
   summarise_at(.vars=vars(clicked),.funs=funs(sum,mean))
@@ -255,26 +270,29 @@ applenews %>%
   group_by(category) %>%
   summarise_at(.funs=funs(min,max), .vars=vars(matches('clicked')), na.rm=T)
 
-#一般計數
+# 一般計數
 applenews %>%
   select(category) %>%
   summarise(n())
 
-#不重複計數
+# 不重複計數
 applenews %>%
   select(category) %>%
   summarise(n_distinct(category))
 
-
 cat_stat = applenews %>%
   group_by(category) %>%
-  summarise(clicked_sum = sum(clicked)) 
-#繪製長條圖
-barplot(cat_stat$clicked_sum, names.arg=cat_stat$category, col=rainbow(length(cat_stat$category)))
-#繪製圓餅圖
+  summarise(clicked_sum = sum(clicked))
+
+# 繪製長條圖
+barplot(cat_stat$clicked_sum, names.arg=cat_stat$category,
+        col=rainbow(length(cat_stat$category)))
+
+# 繪製圓餅圖
 pie(cat_stat$clicked_sum, label = cat_stat$category)
+```
 
-
+```{r}
 #連接資料庫範例(以sqlite3為例)
 # sqlite3 download page: https://www.sqlite.org/download.html
 install.packages('dbplyr')
@@ -287,6 +305,7 @@ copy_to(my_database,applenews,temporary = F)
 tbl(my_database,"applenews")
 tbl(my_database,"applenews") %>% collect()
 
+# ggplot2
 category_stat = tbl(my_database,"applenews") %>% 
   group_by(category) %>%
   summarise_at(.funs=funs(min,max,mean), .vars=vars(matches('clicked'))) %>%
