--- a/20170725.Rmd
+++ b/20170725.Rmd
@@ -13,9 +13,9 @@ output: html_document
 - http://mp.weixin.qq.com/s?__biz=MjM5ODczNTkwMA==&mid=2650107069&idx=1&sn=44a2eab6c4858c56af236749fdd1d784#rd
 
 # Classification
-## Decision Tree - using churn data in C50 package
+## Decision Tree - using churn data in C50 packages
 ```{R}
-install.packages("C50")
+# install.packages("C50")
 library(C50)
 
 data(churn)
@@ -33,16 +33,19 @@ str(churnTrain)
 ?sample
 sample(1:10)
 sample(1:10, size = 5)
-sample(c(0,1), size= 10, replace = T)
+sample(c(0,1), size= 10, replace = T)  # 取後放回
 sample.int(20, 12) # 兩個參數都要放整數，此例為取1:20中的12個不重複樣本
 
 
+# 通常產生亂數序列希望是不會重復的。實際上，R 在現在操作視窗下，第一次產生時亂數時，從當下時間 (current time)，生成一個種子 (seed) 出發，不斷迭代更新產生隨機均等分配亂數 (uniform random number)，所以不同時間下執行 R，啟用不同的種子，隨後內部的隨機種子就已經改變了。
+# 模擬亂數是不會重復的，有時我們需要模擬結果是可重復的亂數序列，此時需要用函式 set.seed()，在每次產生偽隨機亂數之前，把種子設定種子為某一特定正整數即可。
 set.seed(2)
-# 把資料分成training data 和 testing data
+# 把資料分成 1:training data 和 2:testing data
 ind <- sample(1:2, size=nrow(churnTrain), replace=T, prob=c(0.7, 0.3))
 trainset = churnTrain[ind == 1,]
 testset = churnTrain[ind == 2,]
 
+table(ind) / nrow(churnTrain)
 
 table(sample(x = 1:2,size = 100, replace=T))
 
@@ -59,7 +62,7 @@ a[ind == 0]
 
 ## rpart
 ```{R}
-install.packages('rpart')
+# install.packages('rpart')
 library('rpart')
 
 # 使用rpart(CART)建立決策樹模型
@@ -69,7 +72,7 @@ summary(churn.rp)
 
 con = rpart.control(cp=0.01)
 ?rpart.control
-churn.rp<-rpart(churn ~., data=trainset,control = con)
+churn.rp <- rpart(churn ~., data=trainset,control = con)
 
 # 畫出決策樹
 par(mfrow = c(1,1))
@@ -108,8 +111,8 @@ text(prune.tree, all=TRUE, use.n=TRUE, cex=0.7)
 predictions <- predict(prune.tree, testset,type = "class")
 table(testset$churn, predictions)
 
-install.packages('caret')
-install.packages('e1071')
+# install.packages('caret')
+# install.packages('e1071')
 library('caret')
 library('e1071')
 confusionMatrix(table(predictions, testset$churn))
@@ -119,7 +122,7 @@ confusionMatrix(table(predictions, testset$churn))
 
 ## ctree
 ```{R}
-install.packages("party")
+# install.packages("party")
 library('party')
 ctree.model = ctree(churn ~ . , data = trainset)
 plot(ctree.model, margin=0.1)
@@ -141,7 +144,7 @@ c50.model = C5.0(churn ~., data=trainset)
 
 ?C5.0Control
 
-c=C5.0Control(minCases = 20)
+c = C5.0Control(minCases = 20)
 c50.model = C5.0(churn ~., data=trainset,control = c)
 
 summary(c50.model)
@@ -172,10 +175,10 @@ mean(accuracies)
 
 ## caret cross-validation
 ```{R}
-install.packages("caret")
+# install.packages("caret")
 library(caret)
-control=trainControl(method="repeatedcv", number=10, repeats=3)
-model =train(churn~., data=trainset, method="rpart", trControl=control)
+control = trainControl(method="repeatedcv", number=10, repeats=3)
+model = train(churn~., data=trainset, method="rpart", trControl=control)
 model
 predictions = predict(model, testset)
 
@@ -191,22 +194,37 @@ plot(importance)
 
 ```
 
+```{r}
+# install.packages("rminer")
+library(rminer)
+model = fit(churn ~ ., trainset, model="rpart")
+VariableImportance = Importance(model, trainset, method="sensv")
+L = list(runs=1, sen=t(VariableImportance$imp), sresponses=VariableImportance$sresponses)
+mgraph(L, graph="IMP", leg=names(trainset), col="gray", Gird=10)
+```
+
+
 ## ROC
 - https://www.youtube.com/watch?v=OAl6eAyP-yo
 - http://www.navan.name/roc/
 
 ```{R}
-install.packages("ROCR")
+# install.packages("ROCR")
 library(ROCR)
 predictions <-predict(churn.rp, testset, type="prob")
 head(predictions)
-pred.to.roc<-predictions[, 1]
+pred.to.roc <- predictions[, 1]
 head(pred.to.roc)
-pred.rocr<-prediction(pred.to.roc, testset$churn)
+pred.rocr <- prediction(pred.to.roc, testset$churn)
 pred.rocr
-perf.rocr<-performance(pred.rocr, measure ="auc", x.measure="cutoff")
-perf.tpr.rocr<-performance(pred.rocr, "tpr","fpr")
-plot(perf.tpr.rocr,colorize=T,main=paste("AUC:",(perf.rocr@y.values)))
+perf.rocr <- performance(pred.rocr, measure ="auc", x.measure="cutoff")
+
+# ROC Curvers
+perf.tpr.rocr <- performance(pred.rocr, "tpr","fpr")
+
+plot(perf.tpr.rocr,
+     colorize=T,
+     main=paste("AUC:",(perf.rocr@y.values)))
 ```
 
 
