--- a/20170727.Rmd
+++ b/20170727.Rmd
@@ -10,7 +10,7 @@ output: html_document
 x =c(0, 0, 1, 1, 1, 1)
 y =c(1, 0, 1, 1, 0, 1)
 
-#euclidean
+# euclidean
 ?dist
 rbind(x,y)
 
@@ -18,7 +18,7 @@ dist(rbind(x,y), method ="euclidean")
 sqrt(sum((x-y)^2))
 dist(rbind(x,y), method ="minkowski", p=2)
 
-#city block
+# city block
 dist(rbind(x,y), method ="manhattan")
 sum(abs(x-y))
 dist(rbind(x,y), method ="minkowski", p=1)
@@ -30,15 +30,15 @@ customer=read.csv('data/customer.csv',header=TRUE)
 head(customer)
 str(customer)
 
-#數值變數作正規化
+# 數值變數作正規化
 customer_s =scale(customer[,-1])
 ?scale
 
-#正規化後的變數平均數為0, 標準差為1
+# 正規化後的變數平均數為0, 標準差為1
 round(mean(customer_s[,2]),3)
 round(sd(customer_s[,2]),3)
 
-#聚合式(bottom-up)
+# 聚合式(bottom-up)
 ?hclust
 hc=hclust(dist(customer_s, method="euclidean"), method="ward.D2")
 plot(hc,hang =-0.01, cex=0.7)
@@ -46,11 +46,11 @@ plot(hc,hang =-0.01, cex=0.7)
 hc3 =hclust(dist(customer, method="euclidean"), method="single")
 plot(hc3, hang =-0.01, cex=0.8)
 
-#分裂式階層式(top-down)
+# 分裂式階層式(top-down)
 install.packages('cluster')
 library(cluster)
 ?diana
-dv =diana(customer_s, metric ="euclidean")
+dv = diana(customer_s, metric ="euclidean")
 summary(dv)
 plot(dv)
 
@@ -60,13 +60,13 @@ plot(dv)
 ```{R}
 # iris clustering
 data(iris)
-hc2=hclust(dist(iris[,-5], method="euclidean"), method="ward.D2")
+hc2 = hclust(dist(iris[,-5], method="euclidean"), method="ward.D2")
 plot(hc2, hang =-0.01, cex=0.7)
 ```
 
 ## cutree
 ```{R}
-fit =cutree(hc, k =4)
+fit = cutree(hc, k =4)
 fit
 table(fit)
 plot(hc)
@@ -76,20 +76,28 @@ rect.hclust(hc, k = 4 , which =4, border="red")
 ```
 
 # k-means
+https://www.r-bloggers.com/bot-botany-k-means-and-ggplot2/
 ```{R}
 str(customer_s)
 set.seed(22)
-fit =kmeans(customer_s, centers=4)
+fit = kmeans(customer_s, centers=4)
 ?kmeans
 
-barplot(t(fit$centers), beside =TRUE,xlab="cluster", ylab="value")
+barplot(t(fit$centers), beside =TRUE, xlab="cluster", ylab="value")
 ?barplot
 fit$centers
+
+ggplot(data=fit$centers, aes(x=Petal.Length, y=Petal.Width, color=cluster )) + 
+  geom_bar(stat="identity")
+  # geom_point() + 
+  # geom_point(data=centers, aes(x=V1,y=V2, color=’Center’)) +
+  # geom_point(data=centers, aes(x=V1,y=V2, color=’Center’), size=52, alpha=.3, legend=FALSE)
+
 ```
 
 
 ```{R}
-install.packages("cluster")
+# install.packages("cluster")
 library(cluster)
 clusplot(customer_s, fit$cluster, color=TRUE, shade=TRUE)
 
@@ -130,7 +138,7 @@ WSS
 plot(x=nk, y=WSS, type="l", xlab="number of k", ylab="within sum of squares")
 
 install.packages("fpc")
-#install.packages("robustbase", repos="http://R-Forge.R-project.org")
+# install.packages("robustbase", repos="http://R-Forge.R-project.org")
 library(fpc)
 ?cluster.stats
 cluster.stats(dist(customer_s), kmeans(customer_s, centers=2)$cluster)
@@ -176,9 +184,9 @@ q
 ```{R}
 install.packages("mlbench")
 # mlbench package provides many methods to generate simulated data with different shapes and sizes.
-#In this example, we generate a Cassini problem graph
+# In this example, we generate a Cassini problem graph
 library(mlbench)
-#install.packages("fpc")
+# install.packages("fpc")
 library(fpc)
 set.seed(2)
 p = mlbench.cassini(500)
@@ -222,7 +230,7 @@ summary(churn.knn)
 table(testset$churn, churn.knn)
 confusionMatrix(table(testset$churn, churn.knn))
 
-#use caret package
+# use caret package
 control=trainControl(method="repeatedcv", number=10, repeats=1)
 train(churn~., data=trainset, method="knn", trControl=control)
 ```
@@ -240,7 +248,7 @@ bayes.table = table(predict(classifier, testset[,!names(testset) %in% c("churn")
 bayes.table
 confusionMatrix(bayes.table)
 
-#use caret package
+# use caret package
 control=trainControl(method="repeatedcv", number=10, repeats=1)
 train(churn~., data=trainset, method="nb", trControl=control)
 ```
@@ -285,7 +293,7 @@ hypothesis
 load("Statistics/mlb11.Rdata")
 str(mlb11)
 
-#簡單線性回歸
+# 簡單線性回歸
 correlation = cor(mlb11$runs, mlb11$at_bats)
 correlation
 
@@ -294,23 +302,23 @@ m1 = lm(runs ~ at_bats, data = mlb11)
 abline(m1,col='red')
 summary(m1)
 
-#殘差分析
+# 殘差分析
 par(mfrow=c(2,2))
 plot(m1)
-#檢定殘差是否為常態分配
-#H0:殘差為常態分配
+# 檢定殘差是否為常態分配
+# H0:殘差為常態分配
 library(car)
 durbinWatsonTest(m1)
-#檢定各殘差變異數是否相等
-#H0:各殘差變異數相等
+# 檢定各殘差變異數是否相等
+# H0:各殘差變異數相等
 ncvTest(m1)
 
-#predict
+# predict
 p_data = data.frame(at_bats=c(4500,5000,5500))
 predict(m1, p_data, interval = "confidence", level = 0.95)
 
 
-#多元線性回歸
+# 多元線性回歸
 var_list = !names(mlb11) %in% c("team","new_onbase","new_slug","new_obs")
 new_mlb = mlb11[,var_list]
 fit = lm(formula = wins ~ . , data = new_mlb)
