--- a/BB102_final_test.Rmd
+++ b/BB102_final_test.Rmd
@@ -4,20 +4,28 @@ output: html_notebook
 ---
 
 ## class: BB102
-## name: _______
+## name: 黃約綸
 
 ```{r}
 #(1) 請讀取final資料夾下的lvr_prices_big5.RData檔案 [5分]
+
+getwd()
+setwd("D:/RStudioWD/riii")
+load("./final/lvr_prices_big5.RData")
 
 ```
 
 ```{r}
 #(2) 請問可使用哪個函式觀看檔案的資料結構？[5分]
 
+str(lvr_prices)
+
 ```
 
 ```{r}
 #(3) 請問可使用哪個函式觀看資料前10筆資料？[5分]
+
+head(lvr_prices, 10)
 
 ```
 
@@ -29,41 +37,75 @@ output: html_notebook
 #  4. finish_ymd 非空值
 #  的房屋資料,並存入house變數中。[8分]
 
+house = lvr_prices[which(lvr_prices$city_land_type == "住" &
+                         lvr_prices$total_price > 0 &
+                         lvr_prices$building_sqmeter > 0 &
+                         c(lvr_prices$finish_ymd) != 1), ]
+
 ```
 
 ```{r}
 #(5) 請使用house資料，利用房屋價格(total_price)及房屋平方米數(building_sqmeter)兩欄位，
 #    產生一新欄位為每平方米價格(price_per_sqmeter)，並將其四捨五入到整數位。[5分]
 
+price_per_sqmeter = round(house$total_price / house$building_sqmeter)
+
+house$price_per_sqmeter = c(price_per_sqmeter)
+
 ```
 
 ```{r}
 #(6) 請使用house資料，利用scale() 將每平方米價格(price_per_sqmeter)欄位資料標準化
 #    ，並剔除掉outlier資料(z-score > 3)。[5分]
+
 house = house[abs(scale(house$price_per_sqmeter)) <= 3,]
+
 ```
 
 ```{r}
 #(7) 請問在house資料中各行政區(area)的資料筆數為何? 可否畫出其長條圖? [5分]
 
+table(house$area)
+
+barplot(table(house$area))
+
 ```
 
 ```{r}
-#(8) 請使用house資料，計算各行政區每平方米價格(price_per_sqmeter)欄位資料的平均數，中位數及標準差
-#tapply(house$price_per_sqmeter,house$area,function(e){list('mean'=mean(e),'median'=median(e),'sd'=sd(e))}) [8分]
+#(8) 請使用house資料，計算各行政區每平方米價格(price_per_sqmeter)欄位資料的平均數，中位數及標準差 [8分]
+
+paste("平均數", mean(house$price_per_sqmeter))
+paste("中位數", median(house$price_per_sqmeter))
+paste("標準差", sqrt(var(house$price_per_sqmeter)))
+
+summary(house$price_per_sqmeter)
+
+tapply(house$price_per_sqmeter,house$area,function(e){list('mean'=mean(e),'median'=median(e),'sd'=sd(e))})
 
 ```
 
 ```{r}
 #(9) 請使用house資料,利用ggplot2的facet_wrap函數繪製各行政區房屋每平方米價格(price_per_sqmeter)的直方圖 [8分]
 
+library(ggplot2)
+
+ggplot(aes(x = price_per_sqmeter), data = house) + 
+  geom_histogram(color = 'black', fill = '#099DD9') + 
+  facet_wrap(~area) + 
+  xlab('price_per_sqmeter') + 
+  ylab('Area')
+
 ```
 
 ```{r}
 #(10) 試利用房屋完工日期(finish_ymd)產生一新變數為屋齡(building_age)加入house資料中。
-#hint1: 取得當前日期的函數為 Sys.Date()
-#hint2: 一年請以365天計算，四捨五入至整數位
-#hint3: 將運算完的資料轉為整數型態(integer) [8分]
+# hint1: 取得當前日期的函數為 Sys.Date()
+# hint2: 一年請以365天計算，四捨五入至整數位
+# hint3: 將運算完的資料轉為整數型態(integer) [8分]
+
+building_age = as.integer(round((Sys.Date() - as.Date(house$finish_ymd)) / 365))
+
+house$building_age = c(building_age)
 
 ```
 
@@ -72,13 +114,21 @@ house = house[abs(scale(house$price_per_sqmeter)) <= 3,]
 #     並將house資料集和house_danger資料集以left outer join方式join起來，
 #     存回house變數中 [5分]
 
+load("./final/house_danger.RData")
+
+house <- merge(x = house, y = house_danger, all.x = TRUE)
+
 ```
 
 ```{r}
 #(12) 請將house資料以8:2的比例分為訓練集和測試集，
 #     將訓練集資料存在trainset變數中，
 #     將測試集資料存在testset變數中。 [5分]
+
 set.seed(1206)
+ind <- sample(1:2, size=nrow(house), replace=T, prob=c(0.7, 0.3))
+trainset = house[ind==1,]
+testset = house[ind==2,]
 
 ```
 
@@ -88,10 +138,29 @@ set.seed(1206)
 #     房屋類型(building_type)及每平方米價格(price_per_sqmeter)
 #     5個變數作為解釋變數放入模型當中建模，並將模型存在house.rp變數中。 [5分]
 
+library(rpart)
+
+# 使用rpart(CART)建立決策樹模型
+house.rp <- rpart(danger ~ area + building_age + building_sqmeter + building_type + price_per_sqmeter,
+                  data = trainset,
+                  method = "class")
+
+summary(house.rp)
 ```
 
 ```{r}
 #(14) 請利用plot()和text()畫出house.rp模型的決策樹 [5分]
+
+par(mfrow = c(1,1))
+plot(house.rp, margin=0.1)
+plot(house.rp, uniform=TRUE,branch = 0.6, margin=0.1)
+text(house.rp)
+text(house.rp, all=TRUE, use.n=TRUE)
+
+library(rattle)
+library(rpart.plot)
+library(RColorBrewer)
+fancyRpartPlot(house.rp)
 
 ```
 
