--- a/20170725.Rmd
+++ b/20170725.Rmd
@@ -23,31 +23,43 @@ library(C50)
 data(churn)
 str(churnTrain)
 
+# 列出所有變數
+names(churnTrain)
+
+# 變數比對 Value Matching
 names(churnTrain) %in% c("state", "area_code", "account_length")
 !names(churnTrain) %in% c("state", "area_code", "account_length")
-# 選擇建模變數
-variable.list = !names(churnTrain) %in% c('state','area_code','account_length')
-churnTrain=churnTrain[,variable.list]
 
-str(churnTrain)
+# 選擇建模變數，排除state, area_code, account_length
+variable.list = !names(churnTrain) %in% c('state','area_code','account_length')
+churnTrain = churnTrain[,variable.list]
+names(churnTrain)
 
 # sample
-?sample
 sample(1:10)
 sample(1:10, size = 5)
-sample(c(0,1), size= 10, replace = T)  # 取後放回
+sample(c(0,1), size= 10, replace = T)  # 取0, 1各10次，取後放回
 sample.int(20, 12) # 兩個參數都要放整數，此例為取1:20中的12個不重複樣本
+```
 
+通常產生亂數序列希望是不會重復的。實際上，R 在現在操作視窗下，第一次產生時亂數時，從當下時間 (current time)，生成一個種子 (seed) 出發，不斷迭代更新產生隨機均等分配亂數 (uniform random number)，所以不同時間下執行 R，啟用不同的種子，隨後內部的隨機種子就已經改變了。
+模擬亂數是不會重復的，有時我們需要模擬結果是可重復的亂數序列，此時需要用函式 set.seed()，在每次產生偽隨機亂數之前，把種子設定種子為某一特定正整數即可。
 
-# 通常產生亂數序列希望是不會重復的。實際上，R 在現在操作視窗下，第一次產生時亂數時，從當下時間 (current time)，生成一個種子 (seed) 出發，不斷迭代更新產生隨機均等分配亂數 (uniform random number)，所以不同時間下執行 R，啟用不同的種子，隨後內部的隨機種子就已經改變了。
-# 模擬亂數是不會重復的，有時我們需要模擬結果是可重復的亂數序列，此時需要用函式 set.seed()，在每次產生偽隨機亂數之前，把種子設定種子為某一特定正整數即可。
+```{R}
 set.seed(2)
 # 把資料分成 1:training data 和 2:testing data
 ind <- sample(1:2, size=nrow(churnTrain), replace=T, prob=c(0.7, 0.3))
 trainset = churnTrain[ind == 1,]
 testset = churnTrain[ind == 2,]
+```
 
+```{R}
+table(ind)
 table(ind) / nrow(churnTrain)
+
+ind_m <- matrix(table(ind), 1)
+ind_m
+prop.table(ind_m)
 
 table(sample(x = 1:2,size = 100, replace=T))
 
@@ -59,30 +71,39 @@ ind = c(1,0,1,0,1,0,1,0,1)
 ind == 1
 a[ind == 1]
 a[ind == 0]
-
 ```
 
 
 ## rpart
+https://c3h3notes.wordpress.com/2010/10/25/r%E4%B8%8A%E7%9A%84cart-package-rpart-%E5%8F%83%E6%95%B8%E7%AF%87/
+
 ```{R}
 # install.packages('rpart')
 library('rpart')
 
 # 使用rpart(CART)建立決策樹模型
 churn.rp <- rpart(churn ~ ., data=trainset)
-churn.rp
-summary(churn.rp)
+# summary(churn.rp)
 
 con = rpart.control(cp=0.01)
-?rpart.control
-churn.rp <- rpart(churn ~., data=trainset,control = con)
+churn.rp <- rpart(churn ~ ., data=trainset, control = con)
+```
 
+http://newtomaso.blogspot.tw/2015/02/par-in-r-rpar.html
+
+```{R}
 # 畫出決策樹
-par(mfrow = c(1,1))
-plot(churn.rp, margin=0.1)
-plot(churn.rp, uniform=TRUE,branch = 0.6, margin=0.1)
 ?plot.rpart
-text(churn.rp)
+
+# Set Or Query Graphical Parameters
+par(mfrow = c(1,1))
+
+# plot(churn.rp)
+# plot(churn.rp, margin=0.1)
+# plot(churn.rp, uniform=TRUE, margin=0.1)
+plot(churn.rp, uniform=TRUE, branch = 0.6, margin=0.1)
+
+# text(churn.rp)
 text(churn.rp, all=TRUE, use.n=TRUE)
 
 printcp(churn.rp)
@@ -95,7 +116,6 @@ library(rpart.plot)
 library(RColorBrewer)
 fancyRpartPlot(churn.rp)
 ```
-
 
 ## Prune
 ```{R}
@@ -164,7 +184,7 @@ confusionMatrix(table(c50.predict, testset$churn))
 ## Estimating model performance with k-fold cross-validation
 ```{R}
 ind = cut(1:nrow(churnTrain), breaks=10, labels=F)
-ind
+# ind
 
 accuracies = c()
 for (i in 1:10) {
@@ -173,7 +193,7 @@ for (i in 1:10) {
   correct_count = sum(predictions == churnTrain[ind == i,c("churn")])
   accuracies = append(correct_count / nrow(churnTrain[ind == i,]), accuracies)
 }
-accuracies
+# accuracies
 mean(accuracies)
 
 ```
@@ -206,8 +226,10 @@ plot(importance)
 library(rminer)
 model = fit(churn ~ ., trainset, model="rpart")
 VariableImportance = Importance(model, trainset, method="sensv")
-L = list(runs=1, sen=t(VariableImportance$imp), sresponses=VariableImportance$sresponses)
-mgraph(L, graph="IMP", leg=names(trainset), col="gray", Gird=10)
+L = list(runs=1,
+         sen=t(VariableImportance$imp),
+         sresponses=VariableImportance$sresponses)
+mgraph(L, graph="IMP", leg=names(trainset), col="gray", Grid=10)
 ```
 
 
@@ -223,7 +245,7 @@ head(predictions)
 pred.to.roc <- predictions[, 1]
 head(pred.to.roc)
 pred.rocr <- prediction(pred.to.roc, testset$churn)
-pred.rocr
+# pred.rocr
 perf.rocr <- performance(pred.rocr, measure ="auc", x.measure="cutoff")
 
 # ROC Curvers
