--- a/BB102_final_test.Rmd
+++ b/BB102_final_test.Rmd
@@ -157,6 +157,7 @@ fancyRpartPlot(house.rp, uniform=TRUE)
 #(15) 請問此決策樹是否需要進行剪枝(prune)？
 #     如需剪枝請將修剪後的模型存回house.rp中。 [5分]
 
+summary(house.rp)
 " 此決策樹不需要進行剪枝(prune) "
 
 # minimum cross-validation errors
@@ -174,10 +175,32 @@ text(house.rp)
 ```{r}
 #(16) 請將測試集資料(testset)放入模型中進行驗證，請問此模型的accuracy, precision,
 #     recall等績效分別為何？ [5分]
+predictions <- predict(house.rp, testset, type = "class")
 
+library('caret')
+library('e1071')
+confusionMatrix(table(predictions, testset$danger))
 ```
 
 ```{r}
 #(17) 請繪製出此模型的ROC曲線，並計算其AUC。 [8分]
 
+library(ROCR)
+
+predictions <- predict(house.rp, testset, type="prob")
+predictions <- predictions[,c(2,1)]
+head(predictions)
+
+pred.to.roc <- predictions[, 1]
+head(pred.to.roc)
+
+pred.rocr <- prediction(pred.to.roc, testset$danger)
+
+perf.rocr <- performance(pred.rocr, measure ="auc", x.measure="cutoff")
+
+perf.tpr.rocr <- performance(pred.rocr, "tpr","fpr")
+
+plot(perf.tpr.rocr,
+     colorize = T,
+     main = paste("AUC:",(perf.rocr@y.values)))
 ```
